[tool.poetry]
name = "koapy"
version = "0.8.2"
description = "Kiwoom Open Api Plus Python"
license = "MIT OR Apache-2.0 OR GPL-3.0-or-later"
authors = ["Yunseong Hwang <kika1492@gmail.com>"]
maintainers = ["Yunseong Hwang <kika1492@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/elbakramer/koapy"
repository = "https://github.com/elbakramer/koapy"
documentation = "https://koapy.readthedocs.io/en/latest/"
keywords = ["kiwoom", "kiwoom-open-api"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Natural Language :: Korean",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Office/Business :: Financial",
]
include = [
    "docs",
    "tests",
    "*.rst",
    "LICENSE",
    "LICENSE.*",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/elbakramer/koapy/issues"

[tool.poetry.dependencies]
# main runtime dependencies
python = ">=3.8,<3.10"
click = "^8.1.2"
cryptography = "^36.0.2"
deprecated = "^1.2.13"
"discord.py" = "^1.7.3"
exchange-calendars = "^3.6.1"
grpcio = "^1.44.0"
grpcio-tools = "^1.44.0"
lxml = "^4.8.0"
numpy = "^1.22.3"
openpyxl = "^3.0.9"
pandas = "^1.4.2"
protobuf = "^3.20.0"
psutil = "^5.9.0"
pygtrie = "^2.4.2"
pyhocon = "^0.3.59"
PySide2 = "^5.15.2.1"
pytz = "^2022.1"
QtPy = "^2.0.1"
requests = "^2.27.1"
Rx = "^3.2.0"
schedule = "^1.1.0"
Send2Trash = "^1.8.0"
SQLAlchemy = "^1.4.35"
tabulate = "^0.8.9"
tqdm = "^4.64.0"
tzlocal = "^4.2"
wrapt = "^1.14.0"

# windows specific dependencies
pywin32 = { version = "^303", markers = "sys_platform == 'win32'" }
pywinauto = { version = "^0.6.8", markers = "sys_platform == 'win32'" }
windows-curses = { version = "^2.3.0", markers = "sys_platform == 'win32'" }

# python compatibility backports for runtime
typing-extensions = { version = "^4.1.1", markers = "python_version < '3.10'" }

[tool.poetry.dev-dependencies]
# development dependencies
actions-toolkit = "^0.1.13"
black = "^22.3.0"
bump2version = "^1.0.1"
codecov = "^2.1.12"
coverage = "^6.3.2"
dunamai = "^1.11.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.942"
pip-tools = "^6.6.0"
pre-commit = "^2.18.1"
pylint = "^2.13.5"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pyupgrade = "^2.32.0"

# python compatibility backports for development
astunparse = { version = "^1.6.3", markers = "python_version < '3.9'" }

# documentation dependencies
Sphinx = "^4.5.0"
sphinx-autoapi = "^1.8.4"
nbconvert = "^6.5.0"
nbsphinx = "^0.8.8"
ipython = "^8.2.0"

[tool.poetry.scripts]
koapy = "koapy.cli:main"

[tool.black]
line-length = 88
force-exclude = "((.+)_pb2.py|(.+)_pb2_grpc.py)"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
