[tool.poetry]
name = "koapy"
version = "0.8.4"
description = "Kiwoom Open Api Plus Python"
license = "MIT OR Apache-2.0 OR GPL-3.0-or-later"
authors = ["Yunseong Hwang <kika1492@gmail.com>"]
maintainers = ["Yunseong Hwang <kika1492@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/elbakramer/koapy"
repository = "https://github.com/elbakramer/koapy"
documentation = "https://koapy.readthedocs.io/en/latest/"
keywords = ["kiwoom", "kiwoom-open-api"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Natural Language :: Korean",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Office/Business :: Financial",
]
include = [
    "docs",
    "tests",
    "*.rst",
    "LICENSE",
    "LICENSE.*",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/elbakramer/koapy/issues"

[tool.poetry.dependencies]
# main runtime dependencies
python = ">=3.8.1,<3.11"
click = "^8.1.3"
cryptography = "^37.0.4"
deprecated = "^1.2.13"
"discord.py" = "^1.7.3"
exchange-calendars = "^4.1.1"
grpcio = "^1.47.0"
grpcio-tools = "^1.47.0"
lxml = "^4.9.1"
numpy = "^1.23.1"
openpyxl = "^3.0.10"
pandas = "^1.4.3"
psutil = "^5.9.0"
pygtrie = "^2.4.2"
pyhocon = "^0.3.59"
PySide2 = "^5.15.2.1"
pytz = "^2022.1"
QtPy = "^2.1.0"
requests = "^2.28.1"
Rx = "^3.2.0"
schedule = "^1.1.0"
Send2Trash = "^1.8.0"
SQLAlchemy = "^1.4.39"
tabulate = "^0.8.10"
tqdm = "^4.64.0"
tzlocal = "^4.2"
wrapt = "^1.14.1"

# windows specific dependencies
pywin32 = { version = "^304", markers = "sys_platform == 'win32'" }
pywinauto = { version = "^0.6.8", markers = "sys_platform == 'win32'" }
windows-curses = { version = "^2.3.0", markers = "sys_platform == 'win32'" }

# python compatibility backports for runtime
typing-extensions = { version = "^4.3.0", markers = "python_version < '3.10'" }

[tool.poetry.dev-dependencies]
# development dependencies
actions-toolkit = "^0.1.13"
black = "^22.6.0"
bump2version = "^1.0.1"
codecov = "^2.1.12"
coverage = "^6.4.1"
dunamai = "^1.12.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
pip-tools = "^6.6.0"
pre-commit = "^2.19.0"
pylint = "^2.14.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pyupgrade = "^2.34.0"

# python compatibility backports for development
astunparse = { version = "^1.6.3", markers = "python_version < '3.9'" }

# documentation dependencies
Sphinx = "^5.0.2"
sphinx-autoapi = "^1.8.4"
nbconvert = "^6.5.1"
nbsphinx = "^0.8.9"
ipython = "^8.4.0"

[tool.poetry.scripts]
koapy = "koapy.cli:main"

[tool.black]
line-length = 88
force-exclude = "((.+)_pb2.py|(.+)_pb2_grpc.py)"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
