[tool.poetry]
name = "koapy"
version = "0.9.0"
description = "Kiwoom Open Api Plus Python"
license = "MIT OR Apache-2.0 OR GPL-3.0-or-later"
authors = ["Yunseong Hwang <kika1492@gmail.com>"]
maintainers = ["Yunseong Hwang <kika1492@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/elbakramer/koapy"
repository = "https://github.com/elbakramer/koapy"
documentation = "https://koapy.readthedocs.io/en/latest/"
keywords = ["kiwoom", "kiwoom-open-api"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Natural Language :: Korean",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Office/Business :: Financial",
]
include = [
    "docs",
    "tests",
    "*.rst",
    "LICENSE",
    "LICENSE.*",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/elbakramer/koapy/issues"

[tool.poetry.dependencies]
# main runtime dependencies
python = ">=3.8.1,<3.11"
click = "^8.1.3"
cryptography = "^38.0.1"
deprecated = "^1.2.13"
"discord.py" = "^2.0.1"
exchange-calendars = "^4.2"
grpcio = "^1.48.1"
grpcio-tools = "^1.48.1"
lxml = "^4.9.1"
numpy = "^1.23.3"
openpyxl = "^3.0.10"
pandas = "^1.4.4"
psutil = "^5.9.0"
pygtrie = "^2.5.0"
pyhocon = "^0.3.59"
PySide2 = "^5.15.2.1"
pytz = "^2022.2.1"
QtPy = "^2.2.0"
requests = "^2.28.1"
Rx = "^3.2.0"
schedule = "^1.1.0"
Send2Trash = "^1.8.0"
SQLAlchemy = "^1.4.41"
tabulate = "^0.8.10"
tqdm = "^4.64.1"
tzlocal = "^4.2"
wrapt = "^1.14.1"

# windows specific dependencies
pywin32 = { version = "^304", markers = "sys_platform == 'win32'" }
pywinauto = { version = "^0.6.8", markers = "sys_platform == 'win32'" }
windows-curses = { version = "^2.3.0", markers = "sys_platform == 'win32'" }

# python compatibility backports for runtime
typing-extensions = { version = "^4.3.0", markers = "python_version < '3.10'" }

[tool.poetry.dev-dependencies]
# development dependencies
actions-toolkit = "^0.1.13"
black = "^22.8.0"
bump2version = "^1.0.1"
codecov = "^2.1.12"
coverage = "^6.4.4"
dunamai = "^1.13.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pip-tools = "^6.6.0"
pre-commit = "^2.20.0"
pylint = "^2.15.2"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pyupgrade = "^2.37.3"

# python compatibility backports for development
astunparse = { version = "^1.6.3", markers = "python_version < '3.9'" }

# documentation dependencies
Sphinx = "^5.1.1"
sphinx-autoapi = "^1.9.0"
nbconvert = "^7.0.0"
nbsphinx = "^0.8.9"
ipython = "^8.5.0"

[tool.poetry.scripts]
koapy = "koapy.cli:main"

[tool.black]
line-length = 88
force-exclude = "((.+)_pb2.py|(.+)_pb2_grpc.py)"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
