[metadata]
description-file = README.rst
license_file = LICENSE

[bumpversion]
current_version = 0.3.5
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:koapy/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88
extend-ignore = E203

[pylint]
max-line-length = 88

[pylint.messages_control]
disable = C0330, C0326

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ["setup.py"]

[rstcheck]
ignore_directives = automodule
